@@ -21,3 +21,9 @@ I wrote this for a final project in Programming Fundamentals II. It's a simple T
 2. `javac --module-path %PATH_TO_FX% --add-modules javafx.controls TicTacToe.java`
 3. `java --module-path %PATH_TO_FX% --add-modules javafx.controls TicTacToe`
 
+## Download TicTacToe, compile and run (Linux/macOS)
+
+1. `git clone https://github.com/clintmint/TicTacToe.git`
+2. `javac --module-path $PATH_TO_FX --add-modules javafx.controls TicTacToe.java`
+3. `java --module-path $PATH_TO_FX --add-modules javafx.controls TicTacToe`
+
